--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 <title>TestingWebsite</title>
 <style>
 body {
-background:url("https://images.unsplash.com/photo-1501455708355-9bfae52b7dc3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=477e9771b3ad18c105bca1a6f9e43372&dpr=1&auto=format&fit=crop&w=1000&q=80&cs=tinysrgb") 0 0/cover repeat fixed;
+background:#e0e0e0;
 }
 
 .card {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 display:none;
 font-family: "Josefin Sans", sans-serif;
 background:white;
@@ -18,19 +19,27 @@ border-radius:20px;
 padding:24px;
 }
 
+.card img {
+
+width:100%;
+height:auto;
+border-radius:14px;
+}
+
 .content {
 
 margin-top:58px;
 }
 
 .header {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 box-sizinh:border-radius;
 right:0;
 font-size:36px;
 text-align: center;
 font-family: "Josefin Sans", sans-serif;
 padding:16px;
-background:blue;
+background:#009688;
 color:white;
 top:0;
 left:0;
@@ -42,8 +51,8 @@ height:4%;
 
 #hamburgerMenu {
 cursor:pointer;
-width:32px;
-height:32px;
+width:auto;
+height:100%;
 }
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -56,7 +65,12 @@ Lorem Ipsum
 </div>
 
 <div class="content" style="margin-top:0px">
-<div class="card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vel lorem sit amet diam dignissim euismod in eget nisi. Donec a rhoncus massa, eu imperdiet ex. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum sed ex in ligula tincidunt convallis. In nec mi metus. Curabitur felis mi, iaculis eu fermentum eget, molestie a lorem. Nullam eu augue id nisi pharetra sollicitudin. In efficitur, lacus at consectetur euismod, ipsum ex vestibulum enim, ac pulvinar nibh magna vitae tortor. Etiam libero diam, scelerisque sit amet tellus dapibus, tempus pellentesque neque. Integer pulvinar vitae odio non finibus. Donec quam nulla, cursus at nibh non, facilisis varius risus. Nulla tempus sit amet enim at interdum. Phasellus sed diam finibus, interdum odio vitae, finibus nisl. Donec pellentesque elementum ante et mattis.</div>
+<div class="card">
+<img style="margin-bottom:16px;" src="http://discovermagazine.com/~/media/Images/Issues/2018/July%20Aug/DSC-Q0818_02.jpg"></img>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vel lorem sit amet diam dignissim euismod in eget nisi. Donec a rhoncus massa, eu imperdiet ex. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum sed ex in ligula tincidunt convallis. In nec mi metus. Curabitur felis mi, iaculis eu fermentum eget, molestie a lorem. Nullam eu augue id nisi pharetra sollicitudin. In efficitur, lacus at consectetur euismod, ipsum ex vestibulum enim, ac pulvinar nibh magna vitae tortor. Etiam libero diam, scelerisque sit amet tellus dapibus, tempus pellentesque neque. Integer pulvinar vitae odio non finibus. Donec quam nulla, cursus at nibh non, facilisis varius risus. Nulla tempus sit amet enim at interdum. Phasellus sed diam finibus, interdum odio vitae, finibus nisl. Donec pellentesque elementum ante et mattis.</div>
+<div class="card" style="margin-top:8px" >
+<img style="margin-bottom:16px;" src="http://cdn.eso.org/images/screen/eso1723a.jpg"></img>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vel lorem sit amet diam dignissim euismod in eget nisi. Donec a rhoncus massa, eu imperdiet ex. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum sed ex in ligula tincidunt convallis. In nec mi metus. Curabitur felis mi, iaculis eu fermentum eget, molestie a lorem. Nullam eu augue id nisi pharetra sollicitudin. In efficitur, lacus at consectetur euismod, ipsum ex vestibulum enim, ac pulvinar nibh magna vitae tortor. Etiam libero diam, scelerisque sit amet tellus dapibus, tempus pellentesque neque. Integer pulvinar vitae odio non finibus. Donec quam nulla, cursus at nibh non, facilisis varius risus. Nulla tempus sit amet enim at interdum. Phasellus sed diam finibus, interdum odio vitae, finibus nisl. Donec pellentesque elementum ante et mattis.</div>
 </div>
 </body>
 
